// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HamButton renders 1`] = `
<DocumentFragment>
  <div
    class="hamburger hamburger--squeeze"
  >
    <span
      class="hamburger-box"
    >
      <span
        class="hamburger-inner"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`HamButton renders as clicked 1`] = `
<DocumentFragment>
  <div
    class="hamburger hamburger--squeeze is-active"
  >
    <span
      class="hamburger-box"
    >
      <span
        class="hamburger-inner"
      />
    </span>
  </div>
</DocumentFragment>
`;
